src/FinancialForce Accounting/objects/codaJournal__c.object
<CustomObject>
    <customHelpPage>codahelpjournal</customHelpPage>
    <description>Acts as a container for a number of journal lines and provides common information about the document.</description>
    <fields>
        <fullName>CanceledJournal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the Journal has been canceled by a cancelling Journal</description>
        <label>Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <label>Credits</label>
        <summarizedField>codaJournalLineItem__c.Value__c</summarizedField>
        <summaryFilterItems>
            <field>codaJournalLineItem__c.Value__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>codaJournalLineItem__c.Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Debits__c</fullName>
        <label>Debits</label>
        <summarizedField>codaJournalLineItem__c.Value__c</summarizedField>
        <summaryFilterItems>
            <field>codaJournalLineItem__c.Value__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>codaJournalLineItem__c.Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DeriveCurrency__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DerivePeriod__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscardReason__c</fullName>
        <label>Discard Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DualRate__c</fullName>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalCounterparty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>External Counterparty.</description>
        <label>External Counterparty</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IncomeScheduleGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>codaGroupingReference__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JournalCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A journal is expressed in a currency</description>
        <label>Journal Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JournalDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The effective date for the journal</description>
        <label>Journal Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JournalDescription__c</fullName>
        <description>A description for the whole document</description>
        <label>Journal Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JournalRate__c</fullName>
        <label>Journal Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JournalStatus__c</fullName>
        <description>The posting status</description>
        <label>Journal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
                <value>
                    <fullName>Ready to Post</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OriginalJournal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Journal Number</label>
        <referenceTo>codaJournal__c</referenceTo>
        <relationshipLabel>Journals (Original Journal)</relationshipLabel>
        <relationshipName>CancellingJournals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OverrideCurrency1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Currency 1</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Journals (Override Currency 1)</relationshipLabel>
        <relationshipName>Journals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OverrideCurrency2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Currency 2</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Journals (Override Currency 2)</relationshipLabel>
        <relationshipName>Journals2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OverrideCurrency3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Currency 3</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Journals (Override Currency 3)</relationshipLabel>
        <relationshipName>Journals3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OverrideDebitValue1__c</fullName>
        <label>Override Debit Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverrideDebitValue2__c</fullName>
        <label>Override Debit Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverrideDebitValue3__c</fullName>
        <label>Override Debit Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecurringJournalSourceJournal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the source journal of a recurring journal</description>
        <label>Recurring Journal Source Journal Number</label>
        <referenceTo>codaJournal__c</referenceTo>
        <relationshipLabel>Journals (Recurring Journal Source Journal Number)</relationshipLabel>
        <relationshipName>RecurringJournals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>A reference, possibly to an external document</description>
        <label>Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceJournal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Journal Number</label>
        <referenceTo>codaJournal__c</referenceTo>
        <relationshipLabel>Journals (Source Journal Number)</relationshipLabel>
        <relationshipName>ReversingJournals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax1Total__c</fullName>
        <label>Tax 1 Total</label>
        <summarizedField>codaJournalLineItem__c.TaxValue1__c</summarizedField>
        <summaryForeignKey>codaJournalLineItem__c.Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax2Total__c</fullName>
        <label>Tax 2 Total</label>
        <summarizedField>codaJournalLineItem__c.TaxValue2__c</summarizedField>
        <summaryForeignKey>codaJournalLineItem__c.Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax3Total__c</fullName>
        <label>Tax 3 Total</label>
        <summarizedField>codaJournalLineItem__c.TaxValue3__c</summarizedField>
        <summaryForeignKey>codaJournalLineItem__c.Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TaxableValueTotal__c</fullName>
        <label>Taxable Value Total</label>
        <summarizedField>codaJournalLineItem__c.TaxableValue__c</summarizedField>
        <summaryForeignKey>codaJournalLineItem__c.Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <summarizedField>codaJournalLineItem__c.Value__c</summarizedField>
        <summaryForeignKey>codaJournalLineItem__c.Journal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>codaTransaction__c</referenceTo>
        <relationshipLabel>Journals</relationshipLabel>
        <relationshipName>Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual Journal</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cash Matching Journal</fullName>
                </value>
                <value>
                    <fullName>Cancelling Journal</fullName>
                </value>
                <value>
                    <fullName>Income Schedule</fullName>
                </value>
                <value>
                    <fullName>Reversing Journal</fullName>
                </value>
                <value>
                    <fullName>Reconciliation Journal</fullName>
                </value>
                <value>
                    <fullName>Year End Journal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitofWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>Period__r.YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Journal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>JournalDate__c</columns>
        <columns>Period__c</columns>
        <columns>Reference__c</columns>
        <columns>JournalStatus__c</columns>
        <columns>IncomeScheduleGroup__c</columns>
        <columns>Credits__c</columns>
        <columns>Debits__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Recurring_Journals</fullName>
        <columns>NAME</columns>
        <columns>RecurringJournalSourceJournal__c</columns>
        <columns>Type__c</columns>
        <columns>JournalDate__c</columns>
        <columns>Period__c</columns>
        <columns>Reference__c</columns>
        <columns>IncomeScheduleGroup__c</columns>
        <columns>JournalCurrency__c</columns>
        <columns>Credits__c</columns>
        <columns>Debits__c</columns>
        <columns>JournalStatus__c</columns>
        <columns>DiscardReason__c</columns>
        <columns>OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecurringJournalSourceJournal__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>OriginalJournal__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CanceledJournal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Recurring Journals</label>
    </listViews>
    <nameField>
        <displayFormat>JNL{000000}</displayFormat>
        <label>Journal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>